<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
            app:layout_scrollFlags="scroll|enterAlways"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.chplalex.notesgb.ui.customview.ColorPickerView
                android:id="@+id/colorPicker"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"/>
        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:hint="@string/hint_note_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/txtNoteBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:text=""
            android:hint="@string/hint_note_body"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>