<resources>
    <string name="app_name">GeekBrains Notes</string>
    <string name="tool_note_title">Geekbrains + Kotlin forever</string>
    <string name="tool_note_body">Я Kotlin бы выучил только за то, что на нем разрабатывал Вортон!</string>
    <string name="new_note_title">Новая заметка</string>
    <string name="hint_note_title">Введите заголовок заметки</string>
    <string name="hint_note_body">Введите текст заметки</string>
    <string name="fab_content_description">Создать новую заметку</string>
    <string name="ok_btn_title">Понятно</string>
    <string name="menu_logout">Logout</string>

    <string name="logout_dialog_title">Выйти из аккаунта?</string>
    <string name="logout_dialog_message">Все заметки будут сохранены. Вы получите к ним доступ после авторизации.</string>
    <string name="logout_dialog_cancel">Отмена</string>
    <string name="cancel_btn_title">Отмена</string>
    <string name="note_palette">Цвет заметки</string>
    <string name="note_delete">Удалить заметку</string>
    <string name="delete_note_message">Подтвердите удаление заметки</string>
    <string name="delete_note_title">Удаление заметки</string>

</resources>